force-app/main/default/objects/CampaignInfluenceClone__c/CampaignInfluenceClone__c.object-meta.xml
<CustomObject>
    <label>CampaignInfluenceClone</label>
    <nameField>
        <displayFormat>CIC-{0000}</displayFormat>
        <label>CampaignInfluenceClone Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CampaignInfluenceClones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>