force-app/main/default/objects/CampaignInfluenceClone__c/fields/Campaign__c.field-meta.xml
<CustomField>
    <fullName>Campaign__c</fullName>
    <label>Campaign</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>CampaignInfluenceClones</relationshipLabel>
    <relationshipName>CampaignInfluenceClones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>