force-app/main/default/objects/CampaignInfluenceClone__c/fields/Influence__c.field-meta.xml
<CustomField>
    <fullName>Influence__c</fullName>
    <label>Influence</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>