force-app/main/default/objects/CampaignInfluenceClone__c/fields/ModelDeveloperName__c.field-meta.xml
<CustomField>
    <fullName>ModelDeveloperName__c</fullName>
    <label>ModelDeveloperName</label>
    <length>200</length>
    <type>Text</type>
</CustomField>